NIFI-15508 Added Record Gauge support to Standard Process Session
- Added ComponentMetricReporter to Framework API
- Added application property for configuring ComponentMetricReporter
- Added getGaugeValues method to TestRunner

This closes #10813.

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>